include/vllm.h


typedef enum vllm_status {
 VLLM_OK = 0,
 VLLM_ERR_INVALID_ARGUMENT = 1, 
 VLLM_ERR_MODEL_LOAD = 2, 
 VLLM_ERR_RUNTIME = 3, 
 VLLM_ERR_UNKNOWN = 4 
} vllm_status;
typedef struct vllm_engine vllm_engine;
typedef struct vllm_model_params {
 const char* model_path;
 const char* tokenizer_config_path;
 int32_t block_size;
 int32_t num_blocks;
 int32_t max_model_len;
 int32_t max_num_seqs;
 const char* tool_parser;
 const char* reasoning_parser;
 const char* speculative_config;
 int32_t enable_prefix_caching;
 int32_t max_num_batched_tokens;
 const char* scheduling_policy;
 const char* kv_transfer_config;
 const char* offload_config;
 int32_t enable_jump_forward;
 int32_t device;
 double gpu_memory_utilization;
 int64_t kv_cache_memory_bytes;
 int32_t language_model_only;
 const char* limit_mm_per_prompt;
 const char* mmproj_path;
} vllm_model_params;
typedef struct vllm_sampling_params {
 float temperature; 
 float top_p; 
 int32_t top_k; 
 float min_p; 
 int32_t max_tokens; 
 uint64_t seed; 
 int32_t has_seed; 
 float presence_penalty; 
 float frequency_penalty; 
 float repetition_penalty; 
 int32_t min_tokens; 
 int32_t ignore_eos; 
 const char* const* stop; 
 int32_t n_stop; 
 const char* structured_json; 
 const char* structured_regex; 
 const char* const* structured_choice; 
 int32_t n_structured_choice; 
 const char* structured_grammar; 
 int32_t structured_json_object; 
 vllm_logits_processor logits_processor; 
 void* logits_processor_user_data; 
} vllm_sampling_params;
typedef struct vllm_completion {
 char* text;
 const char* finish_reason;
 int32_t prompt_tokens;
 int32_t completion_tokens;
} vllm_completion;
VLLM_API vllm_status vllm_engine_load(const vllm_model_params* params,
 vllm_engine** out);
VLLM_API void vllm_engine_free(vllm_engine* engine);
VLLM_API vllm_status vllm_complete(vllm_engine* engine, const char* prompt,
 const vllm_sampling_params* params,
 vllm_completion* out);
typedef bool (*vllm_token_callback)(const char* delta_text, bool finished,
 void* user_data);
VLLM_API vllm_status vllm_complete_stream(vllm_engine* engine,
 const char* prompt,
 const vllm_sampling_params* params,
 vllm_token_callback cb,
 void* user_data);
VLLM_API vllm_status vllm_chat(vllm_engine* engine, const char* request_json,
 char** out_response_json);
VLLM_API vllm_status vllm_chat_stream(vllm_engine* engine,
 const char* request_json,
 vllm_token_callback cb, void* user_data);
typedef struct vllm_embedding_result {
 float* values; 
 int32_t n_embeddings; 
 int32_t dim; 
 int32_t prompt_tokens; 
} vllm_embedding_result;
VLLM_API vllm_status vllm_embed(vllm_engine* engine,
 const char* const* texts, int32_t n_texts,
 vllm_embedding_result* out);
VLLM_API void vllm_embedding_result_free(vllm_embedding_result* out);
VLLM_API void vllm_string_free(char* s);
VLLM_API void vllm_completion_free(vllm_completion* out);
VLLM_API const char* vllm_last_error(void);
VLLM_API const char* vllm_version(void);
VLLM_API int32_t vllm_abi_version(void);